--- a/packages/pancake-profile-sdk/package.json
+++ b/packages/pancake-profile-sdk/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@pancakeswap/profile-sdk",
+  "name": "@anyswap/profile-sdk",
   "version": "0.3.0",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
-  "repository": "https://github.com/pancakeswap/pancake-toolkit/tree/master/packages/pancake-profile-sdk",
+  "repository": "https://github.com/young-peng/anyswap/tree/master/packages/pancake-profile-sdk",
   "scripts": {
     "build": "rm -rf ./dist && rollup -c && tsc -d --emitDeclarationOnly --declarationDir dist",
     "start": "yarn build && node ./dist",
