--- a/packages/token-lists/package.json
+++ b/packages/token-lists/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pancakeswap/token-lists",
+  "name": "@anyswap/token-lists",
   "version": "2.27.0",
   "main": "dist/index.js",
   "type": "module",
