--- a/packages/pancake-profile-sdk/package.json
+++ b/packages/pancake-profile-sdk/package.json
@@ -5,7 +5,7 @@
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
-  "repository": "https://github.com/young-peng/anyswap/tree/master/packages/pancake-profile-sdk",
+  "repository": "https://github.com/young-peng/anyswap/tree/main/packages/pancake-profile-sdk",
   "scripts": {
     "build": "rm -rf ./dist && rollup -c && tsc -d --emitDeclarationOnly --declarationDir dist",
     "start": "yarn build && node ./dist",
@@ -40,5 +40,6 @@
   "dependencies": {
     "@types/js-cookie": "^2.2.6",
     "js-cookie": "^2.2.1"
-  }
+  },
+  "gitHead": "78b45e91898821d07403bc47967e34bcfa258d15"
 }
